# wp-telegram-backup-bot

./: .env.example  .gitignore  README.md  bot.sqlite3  main.py  pyproject.toml  requirements.txt
bot/: __main__.py
bot/core/: auth.py  config.py  errors.py  logging.py  roles.py  security.py
bot/db/: session.py
bot/handlers/: __init__.py  backup.py  cache.py  common.py  disk.py  restore.py
bot/keyboards/: main.py
bot/models/: __init__.py  backup.py  operation.py
bot/repositories/: __init__.py  backups.py  operations.py
bot/services/: __init__.py  admin_notifications.py  archive.py  backup.py  cache.py  disk.py  disk_chart.py  filesystem.py  operations.py  process.py  restore.py  scheduler.py  status.py
bot/utils/: sanitize.py
deploy/: telegram-wp-backup.service.example  wp-telegram-backup-bot.service.example
docs/: ARCHITECTURE.md  CHANGELOG.md  COMMANDS.md  CONFIGURATION.md  DEPLOYMENT.md  README.md  acceptance-checklist.md  backup-restore-flow.md  technical-spec.md  testing-strategy.md
docs/.tasks/: 00-roadmap.md  01-project-foundation.md  02-config-and-security.md  02-env-configuration.md  03-local-database.md  04-telegram-interface.md  05-backup-service.md  05-user-access.md  06-backup-service.md  06-restore-service.md  07-disk-monitoring.md  07-local-restore-service.md  08-cache-clear-service.md  08-external-restore-service.md  09-cache-clear-service.md  09-scheduler.md  10-disk-monitoring.md  (+4 more)
tests/: test_auth.py  test_backup_actions.py  test_backup_confirm.py  test_config.py  test_database.py  test_security.py  test_services.py
(+3 files in other folders)
